--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,13 @@ Package: lstparseR
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
+    c(
+        person("Simeon", "Rüdesheim", email = "simeon.ruedesheim@uni-saarland.de", role = c("aut", "cre")),
+        person("Raban", "Heller", email = "raban.heller@charite.de", role = "aut",
+        person("Dominik", "Selzer", email = "dominik.selzer@uni-saarland.de", role = "aut")
+    )
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: FILE LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
